Use more efficient 2 pointer solution for problem 15