@@ -6,19 +6,24 @@ public class ThreeSum {
 
     public List<List<Integer>> threeSum(int[] nums) {
         Set<List<Integer>> results = new HashSet<>();
+        Arrays.sort(nums);
 
-        for (int i = 0; i < nums.length; i++) {
-            for (int j = i + 1; j < nums.length; j++) {
-                for (int k = j + 1; k < nums.length; k++) {
-                    if (nums[i] + nums[j] + nums[k] == 0) {
-                        List<Integer> triplet = Arrays.asList(nums[i], nums[j], nums[k]);
-                        Collections.sort(triplet);
-                        results.add(triplet);
-                    }
+        for (int i = 0; i < nums.length - 1; i++) {
+            int k = nums.length - 1;
+            int j = i + 1;
+            while (j < k) {
+                int total = nums[i] + nums[j] + nums[k];
+                if (total == 0) {
+                    results.add(List.of(nums[i], nums[j], nums[k]));
+                }
+
+                if (total < 0) {
+                    j++;
+                } else {
+                    k--;
                 }
             }
         }
-
         return new ArrayList<>(results);
     }
 }
